--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -34,13 +34,17 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    rgb(235,34,39),
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
         fmsRed: (
                 base: rgb(235,34,39),
+                contrast: #ffffff
+        ),
+        fmsRedSecondary: (
+                base: #EB5858,
                 contrast: #ffffff
         )
 );
