--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -35,8 +35,9 @@ $app-direction: ltr;
 
 $colors: (
   primary:    rgb(235,34,39),
-  secondary:  #32db64,
+  secondary:  rgb(93,182,91),
   danger:     #f53d3d,
+        fmsgold: rgb(211,170,46),
   light:      #f4f4f4,
   dark:       #222,
         fmsRed: (
