--- a/myApp/src/pages/logout/logout.scss
+++ b/myApp/src/pages/logout/logout.scss
@@ -1,3 +1,14 @@
 page-logout {
 
+  ion-grid {
+    height: 100%;
+    justify-content: center;
+  }
+
+  ion-content {
+    background-image: url("../../assets/img/hero.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
+  }
 }
