--- a/myApp/src/pages/screening-fms/screening-fms.scss
+++ b/myApp/src/pages/screening-fms/screening-fms.scss
@@ -1,3 +1,20 @@
 page-screening-fms {
+  .screening ion-col {
+    position: relative;
+  }
 
+  .screening ion-col ion-badge {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 20px;
+    width: 20px;
+    padding: 5px 0;
+    font-size: 10px;
+    text-align: center;
+    -webkit-border-radius: 50%!important;
+    -moz-border-radius: 50%!important;
+    border-radius: 50%!important;
+    padding-top: 5px;
+  }
 }
