--- a/myApp/src/pages/screening-fms/screening-fms.scss
+++ b/myApp/src/pages/screening-fms/screening-fms.scss
@@ -5,8 +5,37 @@ page-screening-fms {
 
   .screening ion-col ion-badge {
     position: absolute;
-    top: 0;
-    right: 0;
+    bottom: 50px;
+    right: 40%;
+    height: 20px;
+    width: 20px;
+    padding: 5px 0;
+    font-size: 10px;
+    text-align: center;
+    -webkit-border-radius: 50%!important;
+    -moz-border-radius: 50%!important;
+    border-radius: 50%!important;
+    padding-top: 5px;
+  }
+
+  .screening ion-col ion-badge.score-lft {
+    position: absolute;
+    bottom: 50px;
+    left: 10px;
+    height: 20px;
+    width: 20px;
+    padding: 5px 0;
+    font-size: 10px;
+    text-align: center;
+    -webkit-border-radius: 50%!important;
+    -moz-border-radius: 50%!important;
+    border-radius: 50%!important;
+    padding-top: 5px;
+  }
+  .screening ion-col ion-badge.score-rt {
+    position: absolute;
+    bottom: 50px;
+    right: 10px;
     height: 20px;
     width: 20px;
     padding: 5px 0;
