--- a/myApp/src/pages/screening-fms/screening-fms.scss
+++ b/myApp/src/pages/screening-fms/screening-fms.scss
@@ -46,4 +46,13 @@ page-screening-fms {
     border-radius: 50%!important;
     padding-top: 5px;
   }
+
+  .screening [col-3], .screening [col-4] {
+    border-right: solid 1px #eee;
+    border-bottom: solid 1px #eee;
+  }
+
+  .screening [col-3]:last-child, .screening [col-4]:last-child {
+    border-right: none;
+  }
 }
