add fcs slide images

--- a/myApp/src/pages/screening-modal-fcs/screening-modal-fcs.scss
+++ b/myApp/src/pages/screening-modal-fcs/screening-modal-fcs.scss
@@ -1,3 +1,9 @@
 page-screening-modal-fcs {
+  .screening [col-3], .screening [col-4] {
+    border-right: solid 1px #eee;
+  }
 
+  .screening [col-3]:last-child, .screening [col-4]:last-child {
+    border-right: none;
+  }
 }
