--- a/myApp/src/pages/screening-ybt/screening-ybt.scss
+++ b/myApp/src/pages/screening-ybt/screening-ybt.scss
@@ -1,10 +1,10 @@
 page-screening-ybt {
-  .screening [col-3], .screening [col-4] {
+  .screening [col-3], .screening [col-4], .screening [col-6] {
     border-right: solid 1px #eee;
     border-bottom: solid 1px #eee;
   }
 
-  .screening [col-3]:last-child, .screening [col-4]:last-child {
+  .screening [col-3]:last-child, .screening [col-4]:last-child, .screening [col-6]:last-child {
     border-right: none;
   }
 }
