modify carry screen

--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -36,9 +36,10 @@ $app-direction: ltr;
 $colors: (
   primary:    rgb(235,34,39),
   secondary:  rgb(93,182,91),
+        fmsBlue:  #3766c7,
   danger:     #f53d3d,
         fmsgold: rgb(211,170,46),
-  light:      #f4f4f4,
+        light:      #f4f4f4,
   dark:       #222,
         fmsRed: (
                 base: rgb(235,34,39),
