--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -34,13 +34,23 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    rgb(235,34,39),
-  secondary:  rgb(93,182,91),
+        primary:    rgb(235,34,39),
+        fail: (
+                base: rgba(235,34,39,.2),
+                contrast: rgb(235,34,39)
+        ),
+
+        secondary:  rgb(93,182,91),
+
+        pass: (
+                base: rgba(93,182,91,.2),
+                contrast: rgb(93,182,91)
+        ),
         fmsBlue:  #3766c7,
-  danger:     #f53d3d,
+        danger:     #f53d3d,
         fmsgold: rgb(211,170,46),
         light:      #f4f4f4,
-  dark:       #222,
+        dark:       #222,
         fmsRed: (
                 base: rgb(235,34,39),
                 contrast: #ffffff
