--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -108,12 +108,97 @@ $colors: (
 @import "noto-sans";
 
 
+/****************************************************************
+ *
+ * CSS Bar Chart
+ *
+*****************************************************************/
 
+.bar-chart {
+        dl {
+                display: flex;
+                background-color: white;
+                flex-direction: column;
+                width: 100%;
+                max-width: 700px;
+                position: relative;
+                padding: 20px;
+        }
+
+        dt {
+                align-self: flex-start;
+                width: 100%;
+                font-weight: 700;
+                display: block;
+                text-align: center;
+                font-size: 1.2em;
+                font-weight: 700;
+                margin-bottom: 20px;
+                margin-left: 130px;
+        }
+
+        .text {
+                font-weight: 600;
+                display: flex;
+                align-items: center;
+                height: 40px;
+                /* width: 130px; */
+                background-color: white;
+                position: absolute;
+                left: 0;
+                justify-content: flex-end;
+        }
+
+        .percentage {
+                font-size: .8em;
+                line-height: 1;
+                text-transform: uppercase;
+                width: 100%;
+                height: 40px;
+                /* margin-left: 130px; */
+                background: repeating-linear-gradient(
+                                to right,
+                                #ddd,
+                                #ddd 1px,
+                                #fff 1px,
+                                #fff 5%
+                );
+
+                &:after {
+                        content: "";
+                        display: block;
+                        background-color: rgb(235,34,39);
+                        width: 50px;
+                        margin-bottom: 10px;
+                        height: 90%;
+                        position: relative;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        transition: background-color .3s ease;
+                        cursor: pointer;
+                        border-radius: 8px;
+                }
+                &:hover,
+                &:focus {
+                        &:after {
+                                background-color: #EB5858;
+                        }
+                }
+        }
+
+        @for $i from 1 through 100 {
+                .percentage-#{$i} {
+                        &:after {
+                                $value: ($i * 1%);
+                                width: $value;
+                        }
+                }
+        }
+}
 
 /****************************************************************
  *
  * CSS Percentage Circle
- * Author: Andre Firchow
  *
 *****************************************************************/
 .rect-auto, .c100.p51 .slice, .c100.p52 .slice, .c100.p53 .slice, .c100.p54 .slice, .c100.p55 .slice, .c100.p56 .slice, .c100.p57 .slice, .c100.p58 .slice, .c100.p59 .slice, .c100.p60 .slice, .c100.p61 .slice, .c100.p62 .slice, .c100.p63 .slice, .c100.p64 .slice, .c100.p65 .slice, .c100.p66 .slice, .c100.p67 .slice, .c100.p68 .slice, .c100.p69 .slice, .c100.p70 .slice, .c100.p71 .slice, .c100.p72 .slice, .c100.p73 .slice, .c100.p74 .slice, .c100.p75 .slice, .c100.p76 .slice, .c100.p77 .slice, .c100.p78 .slice, .c100.p79 .slice, .c100.p80 .slice, .c100.p81 .slice, .c100.p82 .slice, .c100.p83 .slice, .c100.p84 .slice, .c100.p85 .slice, .c100.p86 .slice, .c100.p87 .slice, .c100.p88 .slice, .c100.p89 .slice, .c100.p90 .slice, .c100.p91 .slice, .c100.p92 .slice, .c100.p93 .slice, .c100.p94 .slice, .c100.p95 .slice, .c100.p96 .slice, .c100.p97 .slice, .c100.p98 .slice, .c100.p99 .slice, .c100.p100 .slice {
@@ -173,7 +258,7 @@ $colors: (
         font-size: 240px;
 }
 .c100.small {
-        font-size: 80px;
+        font-size: 60px;
 }
 .c100 > span {
         position: absolute;
@@ -184,7 +269,7 @@ $colors: (
         width: 5em;
         line-height: 5em;
         font-size: 0.2em;
-        color: #cccccc;
+        color: #777777;
         display: block;
         text-align: center;
         white-space: nowrap;
@@ -950,7 +1035,7 @@ $colors: (
         height: 0.92em;
 }
 .c100.dark {
-        background-color: #777777;
+        background-color: #cccccc;
 }
 .c100.dark .bar,
 .c100.dark .fill {
@@ -960,7 +1045,7 @@ $colors: (
         color: #777777;
 }
 .c100.dark:after {
-        background-color: #666666;
+        background-color: #ffffff;
 }
 .c100.dark:hover > span {
         color: rgb(235,34,39);
