--- a/myApp/src/theme/variables.scss
+++ b/myApp/src/theme/variables.scss
@@ -122,7 +122,7 @@ $colors: (
                 width: 100%;
                 max-width: 700px;
                 position: relative;
-                padding: 20px;
+                padding: 0;
         }
 
         dt {
@@ -147,6 +147,14 @@ $colors: (
                 position: absolute;
                 left: 0;
                 justify-content: flex-end;
+        }
+
+        .percentage.blue {
+
+                &:after {
+                        background-color: #3766c7;
+
+                }
         }
 
         .percentage {
@@ -178,6 +186,7 @@ $colors: (
                         cursor: pointer;
                         border-radius: 8px;
                 }
+
                 &:hover,
                 &:focus {
                         &:after {
